# Maple

./: .gitignore  LICENSE  READEME.md  README.md  build.gradle  settings.gradle
demo/: build.gradle
demo/src/androidTest/java/me/fycz/maple/: ExampleInstrumentedTest.java
demo/src/main/: AndroidManifest.xml
demo/src/main/java/me/fycz/demo/: MainActivity.kt
demo/src/main/java/me/fycz/maple/: MainActivity.kt
demo/src/main/res/layout/: activity_main.xml
demo/src/main/res/values/: strings.xml  themes.xml
demo/src/main/res/values-night/: themes.xml
demo/src/test/java/me/fycz/maple/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
maple/: build.gradle
maple/src/androidTest/java/me/fycz/maple/: ExampleInstrumentedTest.java
maple/src/main/: AndroidManifest.xml
maple/src/main/java/me/fycz/maple/: MapleBridge.java  MapleUtils.java  MethodHook.java  MethodReplacement.java
maple/src/main/java/org/apache/commons/lang3/reflect/: MemberUtilsX.java
maple/src/main/jni/: CMakeLists.txt  elf_util.cpp  elf_util.h  logging.h  maple.cpp
